[package]
name = "monty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
iced = { version = "0.12.1", features = ["svg", "image", "canvas", "tokio"] }
lm-sensors = "0.2.2"
plotters = "0.3.5"
plotters-iced = "0.10.0"
sysinfo = "0.30.8"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
